--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<nav>
 			<ul>
 				<li>gastonch1215@gmail.com</li>
-				<li><a href="https://github.com/" target="_blank">GitHub</a></li>
+				<li><a href="https://github.com/tonidevv" target="_blank">GitHub</a></li>
 		 		<li><a href="portafolioesp.html">¡Versión en español!</a></li>
 		</nav>
 			</ul>
